[tool.poetry]
name = "2021_computer_networking_project"
version = "0.1.0"
description = ""
authors = ["DripCharacter <wsms8646@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.1"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
redis = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
